# cmake-tutorial

./: .gitignore  CMakeLists.txt  blah.txt  cmake-tutorial.code-workspace  out.cpp  workspace.code-workspace
dev/: CMakeLists.txt
dev/EntryPoint/: CMakeLists.txt  main.cpp  main.hpp
dev/cmake/: common.cmake
dev/import extern library/: CMakeLists.txt  main.cpp
dev/libraries/libBasic/: CMakeLists.txt  libBasic.vcxproj  libBasic.vcxproj.filters
dev/libraries/libBasic/private/: basicLibPrivateFile.hpp
dev/libraries/libBasic/public/: basicLibPublicFile.hpp
dev/libraries/libBasic/src/: basicLibPrivateFile.cpp  basicLibPublicFile.cpp
dev/libraries/libDynamic/: CMakeLists.txt  libDynamic.vcxproj  libDynamic.vcxproj.filters
dev/libraries/libDynamic/private/: dynamicLibPrivateFile.hpp
dev/libraries/libDynamic/public/: dynamicLibPublicFile.hpp  libDynamicDllDefinitions.hpp
dev/libraries/libDynamic/src/: dynamicLibPrivateFile.cpp  dynamicLibPublicFile.cpp
dev/libraries/libStatic/: CMakeLists.txt  libStatic.vcxproj  libStatic.vcxproj.filters
dev/libraries/libStatic/private/: staticLibPrivateFile.hpp
dev/libraries/libStatic/public/: staticLibPublicFile.hpp
dev/libraries/libStatic/src/: staticLibPrivateFile.cpp  staticLibPublicFile.cpp
dev/unity_build/: CMakeLists.txt
